# sglang

./: .pre-commit-config.yaml  PR-21567-ANALYSIS.md
.github/workflows/: build-ci-image.yml  check-server-args-parity.yml  pr-test-rust.yml  pr-test.yml
docker/: Dockerfile.ci
docs/developer_guide/: setup_github_runner.md
docs_new/: docs.json
docs_new/docs/developer_guide/: mlx_dlpack_bridge_investigation.mdx
proto/: gen_msgspec.py  generate_msgspec.sh
proto/sglang/runtime/v1/: ipc.proto
python/: pyproject.toml
python/sglang/: bench_serving.py
python/sglang/srt/: environ.py  server_args.py
python/sglang/srt/arg_groups/: gen_rust_cli.py
python/sglang/srt/distributed/: parallel_state.py
python/sglang/srt/entrypoints/: engine.py  http_server.py
python/sglang/srt/grpc/: messages.py
python/sglang/srt/layers/: dp_attention.py  elementwise.py  logits_processor.py  multimodal.py
python/sglang/srt/managers/: io_struct.py  (+7 more)
python/sglang/test/: test_utils.py
rust/sglang-grpc/: Cargo.toml  build.rs
rust/sglang-grpc/src/: lib.rs  msgpack.rs  server.rs  server_args_generated.rs  zmq_transport.rs
scripts/ci/: check_rust_cli_drift.py
scripts/ci/cuda/: ci_install_dependency.sh
sglang-mps/: README.md  pyproject.toml  requirements-lock.txt
sglang-mps/sglang_mps/: __init__.py  platform.py
test/manual/: test_tokenizer_manager.py
test/registered/core/: test_srt_endpoint.py
test/registered/entrypoints/: test_http_msgspec_req_input.py
test/registered/sessions/: test_streaming_session.py
test/srt/: test_cpu_inference.py  test_srt_platforms.py
(+71 files in other folders)
